--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,17 @@
   "private": true,
   "dependencies": {
     "@types/react": "^16.8.2",
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "jwt-decode": "^2.2.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-flash-message": "^1.0.2",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
