--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "social network for developers",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "client-install": "npm install --prefix client",
+    "server": "node index.js",
+    "start": "nodemon index.js",
+    "dev": "concurrently \"npm run server\"\"npm run client\""
   },
   "author": "Tope Ojewale",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.3.0",
